--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             <a href="https://whatsapp.com/channel/0029VafTNNQ7DAWu5NQP0O3I" target="_blank"><i class="fa-brands fa-whatsapp"></i> واتساب</a>
             <a href="https://youtube.com/@almihrab.om1?si=iUtB5q2kHfFIrg7G" target="_blank"><i class="fa-brands fa-youtube"></i> يوتيوب</a>
             <a href="https://www.instagram.com/almihrab.om?igsh=MXJlZHgxdGM5dXAybQ==" target="_blank"><i class="fa-brands fa-instagram"></i> انستجرام</a>
-            <a href="https://x.com/Oman_male?t=SkFwesWGWVPcXJIBYFDpIA&s=09" target="_blank"><i class="fa-brands fa-twitter"></i> تويتر</a>
+            <a href="https://x.com/almihrabb?t=dda3mBHkAIsTw411pAO3Sg&s=09"><i class="fa-brands fa-twitter"></i> تويتر</a>
         </div>
     </div>
 
