--- a/index.html
+++ b/index.html
@@ -64,54 +64,6 @@
             font-size: 20px;
         }
 
-        /* تنسيق قسم الإعلانات */
-        .ad-banner {
-            width: 100%;
-            max-width: 900px;
-            background: #ffffff;
-            padding: 20px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-            margin-bottom: 30px;
-            text-align: center;
-            border-radius: 15px;
-            border: 1px solid #e0e0e0;
-            transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.5s ease;
-        }
-
-        body.dark-mode .ad-banner {
-            background: #2c3e50;
-            color: #f0f0f0;
-        }
-
-        .ad-banner:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 12px 30px rgba(0, 0, 0, 0.3);
-        }
-
-        .ad-banner img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            cursor: pointer;
-            transition: transform 0.3s ease;
-        }
-
-        .ad-banner img:hover {
-            transform: scale(1.05);
-        }
-
-        .ad-banner p {
-            font-size: 14px;
-            color: #555;
-            margin: 15px 0;
-            transition: color 0.5s ease;
-        }
-
-        body.dark-mode .ad-banner p {
-            color: #f0f0f0;
-        }
-
         /* تنسيق باقي الصفحة */
         .container {
             max-width: 900px;
@@ -250,9 +202,6 @@
                 width: 150px;
                 height: 150px;
             }
-            .ad-banner {
-                padding: 15px;
-            }
             .container {
                 padding: 20px;
             }
@@ -325,12 +274,6 @@
         <i class="fas fa-moon"></i>
     </button>
 
-    <!-- قسم الإعلانات -->
-    <div class="ad-banner">
-        <img src="https://i.postimg.cc/8PnttyXZ/Instagram-post-20250224-162846.png" alt="إعلان" onclick="showInstagramPopup()">
-        <p>شكرا لكم</p>
-    </div>
-
     <!-- المحتوى الرئيسي -->
     <div class="container">
         <img id="theme-image" src="https://i.postimg.cc/GhG5z454/IMG-3129.png" alt="المحراب">
@@ -340,7 +283,7 @@
             <a href="https://whatsapp.com/channel/0029VafTNNQ7DAWu5NQP0O3I" target="_blank"><i class="fa-brands fa-whatsapp"></i> واتساب</a>
             <a href="https://youtube.com/@almihrab.om1?si=iUtB5q2kHfFIrg7G" target="_blank"><i class="fa-brands fa-youtube"></i> يوتيوب</a>
             <a href="https://www.instagram.com/almihrab.om?igsh=MXJlZHgxdGM5dXAybQ==" target="_blank"><i class="fa-brands fa-instagram"></i> انستجرام</a>
-            <a href="https://x.com/almihrabb?t=dda3mBHkAIsTw411pAO3Sg&s=09"><i class="fa-brands fa-twitter"></i> تويتر</a>
+            <a href="https://x.com/Oman_male?t=SkFwesWGWVPcXJIBYFDpIA&s=09" target="_blank"><i class="fa-brands fa-twitter"></i> تويتر</a>
         </div>
     </div>
 
